--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
   },
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.7",
+    "axios": "^0.19.2",
+    "dotenv": "^8.2.0",
     "expo": "~36.0.0",
+    "expo-location": "~8.0.0",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
@@ -20,7 +23,10 @@
     "react-native-web": "~0.11.7",
     "react-navigation": "^4.3.6",
     "react-navigation-stack": "^2.3.9",
-    "react-navigation-tabs": "^2.8.10"
+    "react-navigation-tabs": "^2.8.10",
+    "react-redux": "^7.2.0",
+    "redux": "^4.0.5",
+    "expo-font": "~8.0.0"
   },
   "devDependencies": {
     "babel-preset-expo": "~8.0.0",
